// Copyright 2015 The gRPC Authors
// protoc -I . --go_out=plugins=grpc:. ./spm.proto

// protoc -I ./ --go_out=. ./spm/spm.proto
// protoc -I ./ --go-grpc_out=. spm/spm.proto

syntax = "proto3";

package spm;

import "api.proto";

option go_package = "./spm;spm";
option java_package = "cn.airiot.sdk.client.dubbo.grpc.spm";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_generic_services = true;

service UserService {
  rpc GetToken (api.TokenRequest) returns (api.Response) {}
}

service ProjectService {
  rpc Query (api.QueryRequest) returns (api.Response) {}
  rpc Get (api.GetOrDeleteRequest) returns (api.Response) {}
  rpc Delete (api.GetOrDeleteRequest) returns (api.Response) {}
  rpc Update (api.UpdateRequest) returns (api.Response) {}
  rpc UpdateLicense (api.UpdateRequest) returns (api.Response) {}
  rpc Replace (api.UpdateRequest) returns (api.Response) {}
  rpc Create (api.CreateRequest) returns (api.Response) {}
}
